//============================================================================//
//                                                                            //
//                         Copyright Â© 2015 Sandpolis                         //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation.                                   //
//                                                                            //
//============================================================================//
syntax = "proto3";

package core.instance;

import "com/sandpolis/core/foundation/platform.proto";
import "com/sandpolis/core/instance/metatypes.proto";

option java_package = "com.sandpolis.core.instance";
option optimize_for = CODE_SIZE;

message ProtoAttributeValue {

    // The timestamp associated with the value
    int64 timestamp = 1;

    repeated string  string   = 2;
    repeated int32   integer  = 3;
    repeated int64   long     = 4;
    repeated bool    boolean  = 5;
    repeated double  double   = 6;
    repeated bytes   bytes    = 7;
}

message ProtoAttribute {
    string path = 1;
    bool replacement = 2;
    bool removal = 3;

    repeated ProtoAttributeValue values = 4;
}

message ProtoDocument {
    string path = 1;
    bool replacement = 2;
    bool removal = 3;

    repeated ProtoAttribute attribute = 4;
    repeated ProtoDocument document = 5;
}
